Fix logo size on mobile (dont use vh)

--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -2,6 +2,11 @@
   // grid-area: header
 }
 
+.logoLink {
+  height: 2em;
+  padding: 0;
+}
+
 .logo {
-  height: 4vh;
+  height: inherit;
 }
